pages/front-end/style.scss
section {
    padding: 3%;
    padding-bottom: 2%;
    overflow: hidden;
    height: fit-content;
    
}

.home-section {
    background-color: #EF4A67;
    color: white;

    .home-container {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        align-content: center;
        flex-wrap: wrap;
    }

    .home-container h3 {
        font-size: 30px;
        font-family: 'Oswald';
        margin: 5px 0;
    }

    .home-container p {
        font-family: 'Roboto';
        font-weight: 400;
        font-size: 18px;
        line-height: 21px;
    }

    .home-logo-section {
        margin-top: 2vh;
        display: flex;
        justify-content: space-between;
    }
}
.section02 {
    .section02-container{
        display: flex;
    }
}
.section3{
    .section3-container  {
        display: flex;
    }
} 

.button-container button {
    height: 3rem;
    width: 10rem;
    color: white;
    background-color: #EF4A67;
    border: none;
    border-radius: 5px;
    margin-top: 5px;
}

.content-container1 h5 {
    font-family: 'Roboto';
    font-size: 18px;
}

.content-container1 h3 {
    font-family: 'Oswald';
    font-size: 30px;
}

.content-container1 p {
    font-family: 'Roboto';
    font-size: 18px;
}

.content-container1 {
    margin-right: 2%;
    width: 45vw;
}
.content-container h3{
    font-family: 'Oswald';
    font-size: 30px;
    color:#EF4A67;
}
.content-container p {
    font-family: 'Roboto';
    font-size: 18px;
    color:#EF4A67;
}
.content-container3 h3{
    font-family: 'Oswald';
    font-size: 30px;
}
.content-container3 p {
    font-family: 'Roboto';
    font-size: 18px;
}

.cards {
    width: 25vw;
    /* height: 255px; */
    background: white;
    box-shadow: 0px 0px 10px 3px rgb(0 0 0 / 25%);
    margin: 2%;
    border-radius: 5px;
    padding: 1%;
}

.cards-heading,
.cards-content {
    color: black;
}

.cards h4 {
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 64px;
    color: #ef4a67;
}

.cards p {
    margin-top: -24px;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    line-height: 16px;
    text-align: left;
}

button {
    background: #FFFFFF;
    border-radius: 10px;
    width: 136px;
    height: 47px;
    border-color: white;
    margin-top: 9%;
    color: #EF4A67;
}

.cardsParentContainer {
    display: flex;
    justify-content: start;
    display: inline-flex;
}

.cardsParentContainer2 {
    display: flex;
    justify-content: center;
}

.cardsParentContainer2 .cards {
    background: white;
    border-radius: 5px;
    height: fit-content;
}

.cards-details h5 {
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 27px;
    color: #EF4A67;
    margin-top: 2px;
}
.cards-details{
    padding: 4%;    
}
.stars {
    display: flex;
    justify-content: center;
    gap: 0.7rem;
}
.swiper-slide{
    .image-container{
        padding: 2%;
    }
}
.cards-details button {
    color: white;
    background-color: #EF4A67;
}

.cardsParentContainer2 p {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 19px;
    color: #EF4A67;
    text-align: left;
    line-height: 16px;
}

.image-container1 {
    margin-left: 3%;
    width: 45vw;
    display: flex;
    justify-content: flex-end;
}


.section2 {
    color: white;
    background-color: #EF4A67;
}

 .section4, .section5 {
    .cardsContainer {
        align-items: center;
    }
    .cardsContainer {
        text-align: center;
    }
    .cards1{
            width: 275px;
            height: fit-content;
            background: #EF4A67;
            box-shadow: 0px 0px 27px 3px rgb(0 0 0 / 25%);
            margin: 33px;
            padding: 4%;
            color: white;
    }
    .cards1 h4{
        font-family: 'Oswald';
        font-style: normal;
        font-weight: 700;
        font-size: 17px;
        line-height: 44px;
        color: #FFFFFF;
        color: white;
    }
    .cards1 p {
        font-family: Roboto;
        color: white;
        line-height: 6px;
    }
}

.section5 {
    height: fit-content;
    padding-bottom: 2%;
}
.container2 {
    display: flex;
}

.content-container22 {
    margin-left: 3%;
    font-family: 'Roboto';
    font-weight: 400;
    font-size: 18px;
    line-height: 21px;
    width: 40vw;
}
.content-container22 div>h3 {
    font-size: 30px;
}
.image-container22 {
    margin-right: 2%;
    width: 45vw;
    display: flex;
}
.button-container2 button {
    height: 3rem;
    width: 10rem;
    color: #EF4A67;
    background-color: white;
    border: none;
    border-radius: 5px;
    margin-top: 5px;
}
.card-inner {
    display: flex;
    flex-direction: column;
    align-items: center;
}
/* customer feed back */

.customer-card{
    display: flex;
    width: 100%;
}
.customer-card h2{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    line-height: 44px;
}
.card-container{
    background-color: white;
    box-shadow: 0px 0px 14px 3px rgb(0 0 0 / 14%);
    padding: 8px 3vw;
    margin: 3%;
}
.customer-img {
    max-width: 50px;
    max-height: 50px;
    img{
        border-radius: 50%;
    }
}
.feedbacks p{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
}
.card-footer h4{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 20px;

    color: #EF4A67;
}
/* faqs */
.faqs h2{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    line-height: 44px;
    text-align: center;
    color: #EF4A67;
}
.faqs p{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 21px;
    text-align: center;
    color: #EF4A67;
}

.Question h6{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    margin: 1vh;

}

.faqs-container h6{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    float: left;
}
.Answer span{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 19px;
}
.Question{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.Answer {
    margin-left: 2%;
    margin-top: 1%;
    margin-bottom: 2%;
}
.Question span{
    width: 20px;
    height: 20px;
    background-color: black;
    color: white;
    font-size: 10px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
}
.Question span img{
    width: 60%;
    margin-top: 5px;
}

/* customer feed back */
/* .customer-container
{
    display: flex;
    flex-direction: column;
    align-items: center;
} */
.customer-container {
    margin-left: 3%;
}
.customer-card{
    display: flex;
    width: 100%;
}
.customer-card h2{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    line-height: 44px;
}
.card-container{
    background-color: white;
    box-shadow: 0px 0px 14px 3px rgb(0 0 0 / 14%);
    padding: 8px 3vw;
    margin: 3%;
}
.customer-img {
    width: 50px;
    height: 50px;
    border-radius: 50%;
}
.feedbacks p{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
}
.card-footer h4{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 20px;

    color: #EF4A67;
}
/* faqs */
.faqs h2{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    line-height: 44px;
    text-align: center;
    color: #EF4A67;
}
.faqs p{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 21px;
    text-align: center;
    color: #EF4A67;
}

.Question h6{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    margin: 1vh;

}

.faqs-container h6{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    float: left;
}
.Answer span{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 19px;
}
.Question{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.Answer {
    margin-left: 2%;
    margin-top: 1%;
    margin-bottom: 2%;
}
.Question span{
    width: 20px;
    height: 20px;
    background-color: black;
    color: white;
    font-size: 10px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
}
.Question span img{
    width: 60%;
}
.carSlider {
    margin-left: 3%;
}
.logo-area img {
    width: 15vh;
}
.logo-area {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    width: 20vw;
}
.logo-area span{
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 27px;
    text-align: center;

    color: #F8FAFF;
}
.img-back-right {
    height: 70vh;
    width: 40vh;
    border-radius: 16px;
    background-color: #EF4A67;
    
}
.img-left {
    position: absolute;
    margin: 2.5%;
    img{
        border-radius: 20px;
        // width: 40vw;
        // height: 60vh;
    }
}
.img-back-left {
    height: 70vh;
    width: 40vh;
    border-radius: 16px;
    background-color: #ffffff;
}
.img-right {
    position: absolute;
    margin: 2.5%;
    img{
        border-radius: 20px;}
}

